--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,10 @@ header{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    position: fixed;
     width: 100%;
-
+    position: fixed;
+    z-index: 1;
+    top: 0;
 }
 .navigation-menu{
     display: flex;
@@ -70,7 +71,10 @@ a{
 
 /*Main content*/
 
-
+.product{
+    width: 500px;
+    height: 700px;
+}
 
 
 
@@ -100,7 +104,7 @@ footer{
 }
 
 .information{
-    width: 1200px;
+    width: 1100px;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -116,8 +120,95 @@ h4{
 
 /*Utils*/
 .container{
-    max-width: 1400px;
-    height: 200px;
+    max-width: 1600px;
     margin: 0 auto;
-    border: dashed 2px black;
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+.column{
+    display: flex;
+    flex-direction: column;
+    flex-basis: calc(100% / 3 - 40px);
+}
+.card{
+    position: relative;
+    margin-bottom: 50px;
+}
+h4{
+    font-size: 25px;
+    padding: 0;
+}
+h5{
+    display: inline;
+    font-size: 20px;
+    font-weight: bolder;
+    color: grey;
+}
+.discount-price{
+    color: red;
+}
+.discount{
+    color: white;
+    padding: 5px;
+    background-color: red;
+    position: absolute;
+    bottom: 15%;
+}
+.green-product{
+    color: white;
+    padding: 5px;
+    background-color: green;
+    position: absolute;
+    left: 10%;
+    bottom: 15%;
+}
+.green-product-no-discount{
+    color: white;
+    padding: 5px;
+    background-color: green;
+    position: absolute;
+    bottom: 15%;
+}
+.favourite{
+    color: black;
+    background-color: white;
+    position: absolute;
+    top: 5%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 80%;
+    cursor: pointer;
+}
+#favourite-change:hover::after{
+    color: red;
+    content: '\2764';
+    background-color: white;
+    position: absolute;
+    top: 5%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 0%;
+    cursor: pointer;
+}
+.container-img img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+.container-img img:hover{
+    opacity: 0;
 }
