--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,15 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    
+    flex-basis: calc(100 / 3);
+    height: 100%;
     justify-content: center;
 }
+.navigation-menu > * {
+    flex-basis: calc(100 / 3);
+}
+
 img{
     width: 200px;
     height: 50px;
@@ -94,6 +100,11 @@ footer{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.footer-navigation-menu > * {
+    flex-basis: calc(100 / 2);
+    border: dashed white;
 }
 
 .socials{
